--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
   },
   "dependencies": {
     "@quasar/extras": "^1.16.4",
+    "@tiptap/pm": "^2.1.13",
+    "@tiptap/starter-kit": "^2.1.13",
+    "@tiptap/vue-3": "^2.1.13",
     "@vueuse/core": "^10.6.1",
     "axios": "^1.6.2",
     "firebase": "^10.6.0",
