--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@tiptap/pm": "^2.1.13",
     "@tiptap/starter-kit": "^2.1.13",
     "@tiptap/vue-3": "^2.1.13",
+    "@vueuse/components": "^10.7.1",
     "@vueuse/core": "^10.6.1",
     "axios": "^1.6.2",
     "firebase": "^10.6.0",
