--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "firebase": "^10.6.0",
     "pinia": "^2.1.3",
     "quasar": "^2.12.0",
+    "uuid": "^9.0.1",
     "vue": "^3.3.4",
     "vue-router": "^4.2.2"
   },
