--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@vueuse/components": "^10.7.1",
     "@vueuse/core": "^10.6.1",
     "axios": "^1.6.2",
+    "browser-image-resizer": "^2.4.1",
     "firebase": "^10.6.0",
     "pinia": "^2.1.3",
     "quasar": "^2.12.0",
